added player pick section, view result section and footer

--- a/style.css
+++ b/style.css
@@ -22,12 +22,172 @@ body {
 header {
   border: 3px solid hsl(217, 16%, 45%);
   border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 20px;
   margin: 50px 0;
 }
 
 h1 {
   font-size: 3rem;
+  display: flex;
+  flex-direction: column;
   margin: 0;
   text-transform: uppercase;
+  line-height: 0.8;
+}
+
+h2 {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+h4 {
+  color: hsl(229, 64%, 46%);
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.score-container {
+  background-color: #fff;
+  border-radius: 12px;
+  padding: 20px 40px;
+  text-align: center;
+  width: 25%;
+}
+
+.score-container p {
+  color: hsl(229, 25%, 31%);
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin: 0;
+}
+
+main {
+  height: 350px;
+  width: 400px;
+  display: none;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  position: relative;
+}
+
+main::before {
+  background-image: url("./img/bg-triangle.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  content: "";
+  position: absolute;
+  top: 20%;
+  left: 15%;
+  height: 70%;
+  width: 70%;
+  z-index: -1;
+}
+
+.btn-circle {
+  border: none;
+  border-radius: 50%;
+  margin: 0 25%;
+  width: 150px;
+  height: 150px;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
+
+.btn-circle:active {
+  transform: scale(0.9);
+}
+
+.btn-circle .wrapper {
+  background-color: #fff;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
+  width: 120px;
+}
+
+.btn-paper {
+  background: linear-gradient(
+    to bottom,
+    hsl(230, 89%, 62%),
+    hsl(230, 89%, 65%)
+  );
+}
+
+.btn-scissors {
+  background: linear-gradient(to bottom, hsl(39, 89%, 49%), hsl(40, 84%, 53%));
+}
+
+.btn-rock {
+  background: linear-gradient(
+    to bottom,
+    hsl(349, 71%, 52%),
+    hsl(349, 70%, 56%)
+  );
+}
+
+.result {
+  display: display;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  width: 700px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.result .btn-play-again {
+  border: 2px solid #fff;
+  border-radius: 10px;
+  color: hsl(229, 25%, 31%);
+  background-color: #fff;
+  font-size: 18px;
+  font-family: inherit;
+  padding: 10px 25px;
+  margin: 8px 0 16px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.result .btn-circle {
+  margin: 25px;
+  transform: scale(1.4);
+}
+
+.big-text {
+  font-size: 3rem;
+  margin: 0 0 20px;
+  line-height: 0.8;
+  text-transform: uppercase;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  padding: 5px;
+  font-size: 1rem;
+}
+
+.github-logo {
+  height: 1.5em;
+  transition: transform 0.4s ease-in-out;
+  filter: invert(100%);
+}
+
+.github-logo:hover {
+  transform: rotate(360deg) scale(1.2);
 }
