--- a/style.css
+++ b/style.css
@@ -14,26 +14,26 @@ body {
 }
 
 .container {
-  width: 600px;
+  width: 500px;
   max-width: 100%;
   margin: 0 auto;
 }
 
 header {
   border: 3px solid hsl(217, 16%, 45%);
-  border-radius: 20px;
+  border-radius: 18px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  margin: 50px 0;
+  padding: 1rem;
+  margin: 40px 0;
 }
 
 h1 {
   font-size: 3rem;
+  margin: 0;
   display: flex;
   flex-direction: column;
-  margin: 0;
   text-transform: uppercase;
   line-height: 0.8;
 }
@@ -46,31 +46,35 @@ h2 {
 h4 {
   color: hsl(229, 64%, 46%);
   margin: 0;
+  letter-spacing: 3px;
   text-transform: uppercase;
 }
 
-.score-container {
+header .score-container {
   background-color: #fff;
-  border-radius: 12px;
+  border-radius: 10px;
   padding: 20px 40px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 25%;
 }
 
-.score-container p {
+header .score-container p {
   color: hsl(229, 25%, 31%);
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: 700;
   margin: 0;
 }
 
 main {
-  height: 350px;
-  width: 400px;
-  display: none;
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  height: 450px;
+  width: 500px;
   margin: 0 auto;
   position: relative;
 }
@@ -91,9 +95,9 @@ main::before {
 .btn-circle {
   border: none;
   border-radius: 50%;
-  margin: 0 25%;
-  width: 150px;
-  height: 150px;
+  margin: 0 25px;
+  width: 180px;
+  height: 180px;
   cursor: pointer;
 }
 
@@ -111,8 +115,8 @@ button:focus {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: 120px;
-  width: 120px;
+  height: 150px;
+  width: 150px;
 }
 
 .btn-paper {
@@ -136,7 +140,7 @@ button:focus {
 }
 
 .result {
-  display: display;
+  display: none;
   justify-content: space-between;
   align-items: center;
   text-align: center;
@@ -167,6 +171,43 @@ button:focus {
   font-size: 3rem;
   margin: 0 0 20px;
   line-height: 0.8;
+  text-transform: uppercase;
+}
+
+.rules {
+  background-color: #f4f4f4;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+}
+
+.rules button {
+  background-color: transparent;
+  border: none;
+  margin-top: 50px;
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+.btn-rules {
+  border: 2px solid #fff;
+  border-radius: 10px;
+  color: #fff;
+  background-color: transparent;
+  font-size: 18px;
+  font-family: inherit;
+  position: fixed;
+  bottom: 50px;
+  right: 30px;
+  padding: 10px 25px;
+  letter-spacing: 2px;
   text-transform: uppercase;
 }
 
