--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-  width: 500px;
+  width: 600px;
   max-width: 100%;
   margin: 0 auto;
 }
@@ -73,8 +73,8 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: 450px;
-  width: 500px;
+  height: 350px;
+  width: 400px;
   margin: 0 auto;
   position: relative;
 }
@@ -96,8 +96,8 @@ main::before {
   border: none;
   border-radius: 50%;
   margin: 0 25px;
-  width: 180px;
-  height: 180px;
+  width: 150px;
+  height: 150px;
   cursor: pointer;
 }
 
@@ -115,8 +115,8 @@ button:focus {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: 150px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
 }
 
 .btn-paper {
@@ -139,17 +139,22 @@ button:focus {
   );
 }
 
-.result {
-  display: none;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  width: 700px;
-  max-width: 100%;
-  margin: 0 auto;
+.btn-rules {
+  border: 2px solid #fff;
+  border-radius: 10px;
+  color: #fff;
+  background-color: transparent;
+  font-size: 18px;
+  font-family: inherit;
+  position: fixed;
+  bottom: 50px;
+  right: 30px;
+  padding: 10px 25px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
 
-.result .btn-play-again {
+.btn-play {
   border: 2px solid #fff;
   border-radius: 10px;
   color: hsl(229, 25%, 31%);
@@ -162,6 +167,16 @@ button:focus {
   text-transform: uppercase;
 }
 
+.result {
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  width: 700px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
 .result .btn-circle {
   margin: 25px;
   transform: scale(1.4);
@@ -172,6 +187,23 @@ button:focus {
   margin: 0 0 20px;
   line-height: 0.8;
   text-transform: uppercase;
+}
+
+#game {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 700px;
+  height: 100vh;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+#game h1 {
+  font-size: 7rem;
+  padding: 1.5rem;
 }
 
 .rules {
@@ -194,21 +226,6 @@ button:focus {
   margin-top: 50px;
   transform: scale(1.2);
   cursor: pointer;
-}
-
-.btn-rules {
-  border: 2px solid #fff;
-  border-radius: 10px;
-  color: #fff;
-  background-color: transparent;
-  font-size: 18px;
-  font-family: inherit;
-  position: fixed;
-  bottom: 50px;
-  right: 30px;
-  padding: 10px 25px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
 }
 
 .footer {
