--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -10,7 +12,8 @@ body {
   );
   color: #fff;
   font-family: "Barlow Semi Condensed", sans-serif;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .container {
@@ -25,8 +28,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
-  margin: 40px 0;
+  padding: 1em;
+  margin: 2.5em 0;
 }
 
 h1 {
@@ -41,6 +44,7 @@ h1 {
 h2 {
   letter-spacing: 2px;
   text-transform: uppercase;
+  margin-bottom: .5em;
 }
 
 h4 {
@@ -53,7 +57,7 @@ h4 {
 header .score-container {
   background-color: #fff;
   border-radius: 10px;
-  padding: 20px 40px;
+  padding: 1.25em 2.5em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -95,7 +99,7 @@ main::before {
 .btn-circle {
   border: none;
   border-radius: 50%;
-  margin: 0 25px;
+  margin: 0 1.6em;
   width: 150px;
   height: 150px;
   cursor: pointer;
@@ -144,25 +148,25 @@ button:focus {
   border-radius: 10px;
   color: #fff;
   background-color: transparent;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-family: inherit;
   position: fixed;
-  bottom: 50px;
-  right: 30px;
-  padding: 10px 25px;
+  bottom: 3em;
+  right: 2em;
+  padding: .6em 1.5em;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
 
 .btn-play {
   border: 2px solid #fff;
-  border-radius: 10px;
+  border-radius: 12px;
   color: hsl(229, 25%, 31%);
   background-color: #fff;
-  font-size: 18px;
+  font-size: 1.2rem;
   font-family: inherit;
-  padding: 10px 25px;
-  margin: 8px 0 16px;
+  padding: .5em 1.2em;
+  margin: .5em 0;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
@@ -178,13 +182,13 @@ button:focus {
 }
 
 .result .btn-circle {
-  margin: 25px;
+  margin: 2em;
   transform: scale(1.4);
 }
 
 .big-text {
-  font-size: 3rem;
-  margin: 0 0 20px;
+  font-size: 2.75rem;
+  margin: 0 0 .4em;
   line-height: 0.8;
   text-transform: uppercase;
 }
@@ -202,8 +206,8 @@ button:focus {
 }
 
 #game h1 {
-  font-size: 7rem;
-  padding: 1.5rem;
+  font-size: 5rem;
+  padding: 1em;
 }
 
 .rules {
@@ -223,7 +227,7 @@ button:focus {
 .rules button {
   background-color: transparent;
   border: none;
-  margin-top: 50px;
+  margin-top: 3.125em;
   transform: scale(1.2);
   cursor: pointer;
 }
@@ -234,9 +238,10 @@ button:focus {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: .6rem;
   width: 100%;
-  padding: 5px;
+  padding: .5em;
+  margin-bottom: .5em;
   font-size: 1rem;
 }
 
