--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
 }
-
 body {
   background: radial-gradient(
     circle at 50% 10%,
@@ -15,12 +14,10 @@ body {
   height: 100vh;
   overflow: hidden;
 }
-
 .container {
   max-width: 600px;
   margin: 0 auto;
 }
-
 header {
   border: 3px solid hsl(217, 16%, 45%);
   border-radius: 18px;
@@ -30,7 +27,6 @@ header {
   padding: 1em;
   margin: 2.5em auto;
 }
-
 h1 {
   font-size: 3rem;
   font-weight: 700;
@@ -40,21 +36,18 @@ h1 {
   text-transform: uppercase;
   line-height: 0.8;
 }
-
 h2 {
   font-size: 2rem;
   letter-spacing: 2px;
   text-transform: uppercase;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
-
 h4 {
   color: hsl(229, 64%, 46%);
   margin: 0;
   letter-spacing: 3px;
   text-transform: uppercase;
 }
-
 header .score-container {
   background-color: #fff;
   border-radius: 10px;
@@ -65,13 +58,11 @@ header .score-container {
   align-items: center;
   width: 25%;
 }
-
 header .score-container p {
   color: hsl(229, 25%, 31%);
   font-size: 3rem;
   font-weight: 700;
 }
-
 main {
   display: flex;
   flex-wrap: wrap;
@@ -82,7 +73,6 @@ main {
   margin: 0 auto;
   position: relative;
 }
-
 main::before {
   background-image: url("./img/bg-triangle.svg");
   background-repeat: no-repeat;
@@ -95,8 +85,6 @@ main::before {
   width: 70%;
   z-index: -1;
 }
-
-/* buttons */
 .btn-circle {
   border: none;
   border-radius: 50%;
@@ -105,15 +93,12 @@ main::before {
   height: 150px;
   cursor: pointer;
 }
-
 button:focus {
   outline: none;
 }
-
 .btn-circle:active {
   transform: scale(0.9);
 }
-
 .btn-circle .wrapper {
   background-color: #fff;
   border-radius: 50%;
@@ -123,7 +108,6 @@ button:focus {
   height: 120px;
   width: 120px;
 }
-
 .btn-paper {
   background: linear-gradient(
     to bottom,
@@ -131,11 +115,9 @@ button:focus {
     hsl(230, 89%, 65%)
   );
 }
-
 .btn-scissors {
   background: linear-gradient(to bottom, hsl(39, 89%, 49%), hsl(40, 84%, 53%));
 }
-
 .btn-rock {
   background: linear-gradient(
     to bottom,
@@ -143,7 +125,6 @@ button:focus {
     hsl(349, 70%, 56%)
   );
 }
-
 .btn-rules {
   border: 2px solid #fff;
   border-radius: 10px;
@@ -154,11 +135,10 @@ button:focus {
   position: fixed;
   bottom: 4em;
   right: 2em;
-  padding: .6em 1.5em;
+  padding: 0.6em 1.5em;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
-
 .btn-play {
   border: 2px solid #fff;
   border-radius: 12px;
@@ -166,12 +146,11 @@ button:focus {
   background-color: #fff;
   font-size: 1.2rem;
   font-family: inherit;
-  padding: .6em 1.2em;
-  margin: .5em 0;
+  padding: 0.6em 1.2em;
+  margin: 0.5em 0;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
-
 .result {
   display: none;
   justify-content: space-between;
@@ -181,19 +160,16 @@ button:focus {
   max-width: 100%;
   margin: 0 auto;
 }
-
 .result .btn-circle {
   margin: 2em;
   transform: scale(1.3);
 }
-
 .big-text {
   font-size: 2.75rem;
-  margin: 0 0 .4em;
+  margin: 0 0 0.4em;
   line-height: 0.8;
   text-transform: uppercase;
 }
-
 #game {
   display: none;
   flex-direction: column;
@@ -205,12 +181,10 @@ button:focus {
   max-width: 100%;
   margin: 0 auto;
 }
-
 #game h1 {
   font-size: 5rem;
   padding: 1em;
 }
-
 .rules {
   background-color: #f4f4f4;
   display: none;
@@ -224,7 +198,6 @@ button:focus {
   height: 100vh;
   z-index: 10;
 }
-
 .rules button {
   background-color: transparent;
   border: none;
@@ -232,103 +205,77 @@ button:focus {
   transform: scale(1.2);
   cursor: pointer;
 }
-
 .footer {
   position: fixed;
   bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: .6rem;
+  gap: 0.6rem;
   width: 100%;
-  padding: .5em;
-  margin-bottom: .5em;
+  padding: 0.5em;
+  margin-bottom: 0.5em;
   font-size: 1rem;
 }
-
 .github-logo {
   height: 1.5em;
   transition: transform 0.4s ease-in-out;
   filter: invert(100%);
 }
-
 .github-logo:hover {
   transform: rotateY(0.5turn) scale(1.4);
 }
-
-
-@media (max-width:30em) {
+@media (max-width: 30em) {
   h1 {
     font-size: 1.5rem;
   }
-
   h2 {
     font-size: 1.25rem;
     margin-bottom: 0;
   }
-
   h4 {
-    font-size: .8rem;
+    font-size: 0.8rem;
     letter-spacing: 1px;
   }
-
   header {
-    justify-content:space-around;
+    justify-content: space-around;
     max-width: 22em;
-    padding: .2em;
+    padding: 0.2em;
     margin: 2em auto;
   }
-
   header .score-container {
-    padding: .8rem;
+    padding: 0.8rem;
   }
-
   header .score-container p {
     font-size: 2rem;
   }
-
   main {
     height: 275px;
     width: 350px;
   }
-
   .btn-circle {
     width: 120px;
     height: 120px;
   }
-
   .btn-circle .wrapper {
     height: 90px;
     width: 90px;
   }
-
   .result {
     max-width: 22em;
   }
-
   .result .btn-circle {
     margin: 1em;
     transform: scale(1);
   }
-
   .btn-play {
-    font-size: .9rem;
-    padding: .3em .9em;
+    font-size: 0.9rem;
+    padding: 0.3em 0.9em;
   }
-
   .big-text {
     font-size: 1.5rem;
   }
-
   .btn-rules {
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
-
-  .footer {
-    font-size: .9rem;
-  }
-
-  .github-logo {
-    height: 1.2em;
-  } 
 }
